# workspace

./: .env.example  .gitignore  .pylintrc  .shellcheckrc  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  KEYCLOAK_MIGRATION.md  KEYCLOAK_MINIO_INTEGRATION.md  KEYCLOAK_QUICKREF.md  KEYCLOAK_SETUP.md  MINIO_TESTING.md  OLD_CONF.md  PENDING_ISSUES.md  PUBLISHING.md  README.md  TASK_COMPLETION_SUMMARY.md  TASK_README.md  TRAEFIK.md  TRAEFIK_SECURE.md  TRAEFIK_TLS.md  compose.minio.keycloak.traefik.yml  compose.minio.keycloak.yml  compose.minio.traefik.secure.tls.yml  compose.minio.yml  compose.traefik.secure.tls.yml  compose.traefik.secure.yml  compose.traefik.yml  compose.yaml  compose.yml
.github/: copilot-instructions.md
authz-proxy/: Dockerfile  requirements.txt
certs/: Dockerfile  README.md  generate-self-signed-cert.sh
dtaas/: .env.example  client.js.example  compose.traefik.secure.yml  conf.dev.example  conf.example
dynamic/: tls.yml
keycloak/: realm-export.json
scripts/: check-common-sync.sh  init-minio-policies.sh  start-secure.sh  sync-minio.sh  test-authz.py  test-keycloak-minio.py
startup/: configure_nginx.py  custom_startup.sh  dtaas_shim.sh  dtaas_user_setup.sh  mount_minio.sh  vscode_server_startup.sh
syssec/: initial-setup.sh  setup-bucket.sh  (+2 more)
workspaces/src/admin/: DOCUMENTATION.md  README.md  config.env  config.env.example  pyproject.toml
workspaces/src/admin/src/admin/: api.py  git_backup.py  main.py  services.py  services_template.json
workspaces/src/admin/tests/: test_api.py  test_cli.py  test_git_backup.py  test_main.py
(+93 files in other folders)
